add vendor images

--- a/site/graph.html
+++ b/site/graph.html
@@ -32,6 +32,10 @@
   <a class="btn topcorner" id="about_btn" href="#" role="button" data-toggle="modal"
     data-target="#exampleModalLong">About</a>
 
+    <div class="bottomcorner" >
+      <a href="https://research.checkpoint.com" target="_blank"><img src="assets/img/cpr-logo.png"/></a>
+      <a href="https://intezer.com" target="_blank"><img src="assets/img/intezer-logo-200px.png"/></a>
+    </div>
 
   <div class="menu-hover">
     <div class="side-menu">
@@ -46,6 +50,7 @@
       <div class="information"></div>
       <div class="connections"></div>
       <div class="references"></div>
+      <div class="intezer"></div>
     </div>
   </div>
 
