add aliases to info box

--- a/site/graph.html
+++ b/site/graph.html
@@ -45,6 +45,7 @@
       <div class="info">
         <div class="actor"></div>
         <div class="attribution"></div>
+        <div class="aliases"></div>
         <div class="first-seen"></div>
       </div>
       <div class="information"></div>
