move graph.html to index.html and update the About text

--- a/site/index.html
+++ b/site/index.html
@@ -61,25 +61,23 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+          <h5 class="modal-title" id="exampleModalLongTitle">Russian APT Map</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus in sodales sapien. Ut mi arcu, lobortis
-            placerat lectus ac, facilisis vehicula diam. Nullam pharetra interdum nibh, sit amet tempus urna tincidunt
-            eget. Nunc consequat vel urna sit amet consequat. Suspendisse maximus facilisis odio, eget placerat mi
-            gravida vestibulum. Vivamus a condimentum tellus. Mauris elementum dui sem, porta ultrices dui sodales
-            laoreet. Nunc neque diam, ultricies eu varius ultricies, vulputate at nulla.
+            This map was created to make the results of our <a href="#" target="_blank">APT Russian Ecosystem</a> research accesible. We recommend to read the full research in order to use this map in its full context.
           </p>
           <p>
-            Integer porta quam molestie, blandit ex quis, consectetur neque. Cras tincidunt magna sodales nunc maximus
-            cursus. Nulla eros magna, cursus sit amet mauris at, interdum vehicula diam. Sed vitae convallis sapien.
-            Fusce suscipit neque id imperdiet vulputate. Nunc ultrices tortor vel purus eleifend, ut consequat velit
-            molestie. Mauris malesuada metus eu aliquet commodo. Proin ac purus imperdiet, interdum nisl sed, dignissim
-            lorem. Morbi venenatis viverra ipsum, a semper purus dapibus sed.
+            The russian APT map is a web-based, interactive map that shows the different families and actors that are part of the Russian APT ecosystem, as well as the connections between them. The map is basically a one stop shop for anyone who is interested to learn and understand the connections and attributions of the samples, modules, families and actors that together are building this ecosystem.
+          </p>
+          <p>
+            The map in intuitive and rich with information. The user can get a full overview of the ecosystem or drill down into specific connections. By clicking on nodes in the graph, a side panel will reveal, containing information about the malware family the node belongs to, as well as links to analysis reports on Intezer’s platform and external links to related articles and publications. Basically, this side-panel is a short identity-card of the entities in the map.
+          </p>
+          <p>
+            The map and its data are open source in our <a href="#" target="_blank">repository</a> and we are inviting you all to add more information and improve it.
           </p>
 
 
