--- a/site/index.html
+++ b/site/index.html
@@ -32,10 +32,10 @@
   <a class="btn topcorner" id="about_btn" href="#" role="button" data-toggle="modal"
     data-target="#exampleModalLong">About</a>
 
-    <div class="bottomcorner" >
-      <a href="https://research.checkpoint.com" target="_blank"><img src="assets/img/cpr-logo.png"/></a>
-      <a href="https://intezer.com" target="_blank"><img src="assets/img/intezer-logo-200px.png"/></a>
-    </div>
+  <div class="bottomcorner">
+    <a href="https://research.checkpoint.com" target="_blank"><img src="assets/img/cpr-logo.png" /></a>
+    <a href="https://intezer.com" target="_blank"><img src="assets/img/intezer-logo-200px.png" /></a>
+  </div>
 
   <div class="menu-hover">
     <div class="side-menu">
@@ -68,26 +68,29 @@
         </div>
         <div class="modal-body">
           <p>
-            This map was created to make the results of our <a href="#" target="_blank">APT Russian Ecosystem</a> research accesible. We recommend to read the full research in order to use this map in its full context.
+            This map was created to make the results of our <a href="#" target="_blank">APT Russian Ecosystem</a>
+            research accesible. We recommend to read the full research in order to use this map in its full context.
           </p>
           <p>
-            The russian APT map is a web-based, interactive map that shows the different families and actors that are part of the Russian APT ecosystem, as well as the connections between them. The map is basically a one stop shop for anyone who is interested to learn and understand the connections and attributions of the samples, modules, families and actors that together are building this ecosystem.
+            The russian APT map is a web-based, interactive map that shows the different families and actors that are
+            part of the Russian APT ecosystem, as well as the connections between them. The map is basically a one stop
+            shop for anyone who is interested to learn and understand the connections and attributions of the samples,
+            modules, families and actors that together are building this ecosystem.
           </p>
           <p>
-            The map in intuitive and rich with information. The user can get a full overview of the ecosystem or drill down into specific connections. By clicking on nodes in the graph, a side panel will reveal, containing information about the malware family the node belongs to, as well as links to analysis reports on Intezer’s platform and external links to related articles and publications. Basically, this side-panel is a short identity-card of the entities in the map.
+            The map in intuitive and rich with information. The user can get a full overview of the ecosystem or drill
+            down into specific connections. By clicking on nodes in the graph, a side panel will reveal, containing
+            information about the malware family the node belongs to, as well as links to analysis reports on Intezer’s
+            platform and external links to related articles and publications. Basically, this side-panel is a short
+            identity-card of the entities in the map.
           </p>
           <p>
-            The map and its data are open source in our <a href="#" target="_blank">repository</a> and we are inviting you all to add more information and improve it.
+            The map and its data are open source in our <a href="#" target="_blank">repository</a> and we are inviting
+            you all to add more information and improve it.
           </p>
-
-
         </div>
-
       </div>
     </div>
   </div>
-
-
 </body>
-
 </html>
