add www to the url

--- a/russia/map/index.html
+++ b/russia/map/index.html
@@ -55,7 +55,7 @@
 
   <div class="bottomcorner">
     <a href="https://research.checkpoint.com" target="_blank"><img src="assets/img/cpr-logo.png" /></a>
-    <a href="https://intezer.com" target="_blank"><img src="assets/img/intezer-logo-200px.png" /></a>
+    <a href="https://www.intezer.com" target="_blank"><img src="assets/img/intezer-logo-200px.png" /></a>
   </div>
 
   <div class="menu-hover">
