--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
 <html>
-    <meta http-equiv="Refresh" content="0; url=russia/map" />
+
+<head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-83542742-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-83542742-2');
+    </script>
+</head>
+<meta http-equiv="Refresh" content="0; url=russia/map" />
+
 </html>
