Update meta infortmation and title

--- a/russia/map/index.html
+++ b/russia/map/index.html
@@ -35,6 +35,8 @@
   </script>
 
   <link rel="stylesheet" href="assets/css/style.css">
+  <title>Russian APT Ecosystem Map</title>
+  <meta name="description" content="The russian APT map is a web-based, interactive map that shows the different families and actors that are part of the Russian APT ecosystem, as well as the connections between them.">
 </head>
 
 <body style="height: 100%; margin: 0">
