Update About with APT Detector

--- a/russia/map/index.html
+++ b/russia/map/index.html
@@ -124,6 +124,9 @@
             identity-card of the entities in the map.
           </p>
           <p>
+            Along with this map we also created a tool we named Russian APT Detector. It wraps a set of Yara rules produced by Intezer’s platform. The rules contain byte-sequences of popular mutual code between one or more samples. We then wrapped it up in a binary to ease the use of the tool. The tool, the Yara ruleset and more information is available on our <a href="https://github.com/ITAYC0HEN/APT-Ecosystem#russian-apt-detector" target="_blank">Github Repository</a>.
+          </p>
+          <p>
             The map and its data are open source in our <a href="https://github.com/ITAYC0HEN/APT-Ecosystem"
               target="_blank">repository</a> and we are inviting
             you all to add more information and improve it.
